# house-plan-toolset

./: .gitignore  README.md  README4LOADER.md  pyproject.toml
docs/: site-intake.md  user-guide.md
resource/ontology/www_onto2ai-toolset_com/ontology/house/: House.cypher  House.rdf
resource/ontology/www_onto2ai-toolset_com/ontology/interior-design/: InteriorDesign.cypher  InteriorDesign.rdf
resource/ontology/www_onto2ai-toolset_com/ontology/landscape/: Landscape.cypher  Landscape.rdf
src/house_landscape_planner/: __init__.py  cli.py  models.py  onto2ai_compat.py
src/house_landscape_planner/analysis/: __init__.py  landscape_features.py  parcel.py  site_diagram.py  site_report.py
src/house_landscape_planner/io/: __init__.py  geojson_loader.py  image_loader.py
src/house_landscape_planner/loaders/: __init__.py  neo4j_parcel_loader.py
src/house_landscape_planner/webapp/: __init__.py  api.py  main.py
src/house_landscape_planner/webapp/static/: index.html
src/house_landscape_planner/webapp/static/css/: styles.css
src/house_landscape_planner/webapp/static/js/: app.js
tests/: test_neo4j_loader.py  test_parcel_analysis.py  test_webapp.py
tests/data/: sample_parcel.geojson
