[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "house-plan-toolset"
version = "0.1.0"
description = "Landscape planning toolkit for a single-house irregular hillside parcel."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.0",
  "jinja2>=3.1.0",
  "onto2ai-engineer",
  "Pillow>=10.0.0",
  "python-multipart>=0.0.20",
  "uvicorn>=0.35.0",
]

[project.scripts]
house-landscape = "house_landscape_planner.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
house_landscape_planner = ["webapp/static/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.sources]
onto2ai-engineer = { path = "../neo4j-onto2ai-toolset", editable = true }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
